--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link href='https://api.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.css' rel='stylesheet' />
   <script src='https://api.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.js'></script>
   <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
+  <script src="script.js"></script>
+  <title>EcoRegions</title>
 </head>
 <body class="detail-off">
   <div id="navbar">
