Add DBpedia Entities info window.

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,4 +1,4 @@
-<ion-header>
+﻿<ion-header>
   <ion-navbar>
     <ion-title>
       About
@@ -7,5 +7,22 @@
 </ion-header>
 
 <ion-content padding>
+  <h1>EcoRegions</h1>
+  <p>World Map of WWF EcoRegions classification.</p>
+  <p>This simple project aims to provide a better view of wild life data, showing Biomes, EcoRegions, their relative description from WWF website as well as encountered species (animal &amp; vegetal), ground cover and related places.</p>
+  <h2>Credits</h2>
+  <p>Map applet and satellite data: <a href="https://www.mapbox.com/" rel="nofollow">Mapbox</a></p>
+  <p>Map EcoRegions data:  WWF <a href="https://www.worldwildlife.org/publications/terrestrial-ecoregions-of-the-world" rel="nofollow">Terrestrial EcoRegions of the World</a></p>
+  <p>EcoRegions informative data: WWF website <a href="https://www.worldwildlife.org/biomes" rel="nofollow">Ecoregions</a></p>
+  <p>Text Annotation and Entities extraction: <a href="https://www.dbpedia-spotlight.org" rel="nofollow">DBpedia Spotlight</a></p>
+  <p>Database Hosting: <a href="https://firebase.com" rel="nofollow">Firebase</a></p>
 
+  <ion-list>
+    <ion-list-header>Realized by</ion-list-header>
+    <ion-item>
+      <ion-icon name="ionic" item-start></ion-icon>
+      Matthias Gaudin
+      <ion-note end>Opulis Code</ion-note>
+    </ion-item>
+  </ion-list>
 </ion-content>
