--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,7 +5,7 @@
         Back
       </button>
     </ion-buttons>
-    <ion-title>Home</ion-title>
+    <ion-title>EcoRegions</ion-title>
 
     <ion-buttons end>
       <button ion-button clear color="dark" (tap)="more()" *ngIf="showDetails">
